--- a/instagram/templates/registration/base.html
+++ b/instagram/templates/registration/base.html
@@ -1,31 +1,53 @@
-  
-{% load bootstrap4 %}
-{% load static %}
+
+{% load bootstrap3 %}
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  {% if title %}
-  <title>Slygram - {{title}}</title>
-  {% else %}
-    <title> Slygram</title>
-  {% endif %}
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+  {%if title%}
+
+  <title>{{title}}</title>
+
+  {%endif%}
 
   {% block styles %}
-  {% bootstrap_css %}
-  <link rel="stylesheet" href="{% static 'css/slygram.css' %}">
+    {% bootstrap_css %}
+ 
   {% endblock %}
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Lobster+Two|Nunito&display=swap" rel="stylesheet">
-</head>
-<body>
-     {% include "navbar.html" %}
-    {% block content %}{%endblock%}
 
-    {% block scripts %}
-         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      {% bootstrap_javascript %}
-     {% endblock %}
+</head>
+
+<body style="background-color:#EBEDEF">
+  <nav class="navbar navbar-default navbar-fixed-top">
+
+    <div class="container">
+
+      <h1 class="logo"><a href="/"><img src="https://seeklogo.com/images/I/instagram-new-2016-glyph-logo-84CB825424-seeklogo.com.png" alt="" style="width:40px">
+      </a>|
+    </h1>
+      <ul class="nav nav-right">
+        <div class="logoname" style="display:inline">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/2000px-Instagram_logo.svg.png" alt="" style="width:150px">
+        </div>
+      </ul>
+    </div><!--/.container-->
+
+  </nav>
+
+  {% block content %}  {%endblock%}
+
+
+  {% block scripts %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://use.fontawesome.com/6198bcf0a2.js"></script>
+    {% bootstrap_javascript %}
+  {% endblock %}
+
 </body>
+
 </html>
