--- a/instagram/templates/newsfeed.html
+++ b/instagram/templates/newsfeed.html
@@ -19,12 +19,12 @@
         </a>
         <div class="like" style="font-size:30px">
           <a href="{% url 'singlePicLike' image.id%}">
-            <i class="material-icons">favorite_border</i>
+            <i class="material-icons"></i>
           </a>
           <a href="{% url 'comment' image.user.username %}">
-            <i class="material-icons" style="margin-left:10px">chat_bubble_outline</i>
+            <i class="material-icons" style="margin-left:10px"></i>
           </a>
-          <i class="material-icons" style="float:right; font-size:40px">bookmark_border</i>
+          <i class="material-icons" style="float:right; font-size:40px"></i>
         </div>
         <p style="margin-top:10px;font-weight:bolder; font-size:16px">{{image.likes}} Likes</p><br>
         {% for comment in comments %}
@@ -74,12 +74,12 @@
         <img src="{{image.image.url}}" class="img-responsive">
         <div class="like" style="font-size:30px; margin-top:10px">
           <i class="fa fa-heart-o" aria-hidden="true" style="margin-right:5px"></i>
-          <i class="material-icons" style="float:right; font-size:40px">bookmark_border</i>
+          <i class="material-icons" style="float:right; font-size:40px">
         </div>
         <p style="margin-top:10px;font-weight:bolder; font-size:16px">{{image.likes}} Likes</p><br>
 
-        <p style="margin-top:-20px"><span style=" margin-right:10px; font-weight:bolder; font-size:16px">Michelle</span>Lovely</p>
-        <p style="font-size:14px;color:grey">{{image.date_uploaded|timesince}} ago</p>
+        <p style="margin-top:-20px"><span style=" margin-right:10px; font-weight:bolder; font-size:16px">Kadan</span>Lovely</p>
+        <p style="font-size:14px;color:grey">{{image.date_posted|timesince}} ago</p>
         <hr>
         <form class="" action="" method="post">
           <input type="text" name="" value="" placeholder="Add a comment" style="border:none; padding:10px; width:100%">
