--- a/instagram/templates/newsfeed.html
+++ b/instagram/templates/newsfeed.html
@@ -26,11 +26,11 @@
           </a>
           <i class="material-icons" style="float:right; font-size:40px"></i>
         </div>
-        <p style="margin-top:10px;font-weight:bolder; font-size:16px">{{image.likes}} Likes</p><br>
+        <p style="margin-top:10px;font-weight:bolder; font-size:16px"> i class= " far fa-heart"> </i>{{image.likes}} Likes</p><br>
         {% for comment in comments %}
         <p style="margin-bottom:-1px"><span style=" margin-right:10px; font-weight:bolder; font-size:16px">{{comment.user}}</span>{{comment.comment}}</p>
         {% endfor %}
-        <p style="font-size:12px;color:grey; margin-top:10px">{{image.date_uploaded|timesince|upper}} ago</p>
+        <p style="font-size:12px;color:grey; margin-top:10px">{{image.date_posted|timesince|upper}} ago</p>
         <hr>
       </div>
       {% endfor %}
@@ -90,5 +90,8 @@
     <div class="col-sm-3">
     </div>
     {% endif %}
+  </div><div class="my image">
+    <img src="https://media0.giphy.com/media/pt0EKLDJmVvlS/200w.webp?cid=790b76115d43d1b56763746336efef48&rid=200w.webp" alt="my image" width:100%; height:100px;>
   </div>
+
   {% endblock %}
