--- a/instagram/templates/single_pic.html
+++ b/instagram/templates/single_pic.html
@@ -13,7 +13,7 @@
       <p style="float:left; margin-right:20px; margin-top:20px; font-weight:bolder">Uploaded By:</p>
       <img src="{{image.image.url}}" alt="" style="height:50px;width:50px; border-radius:50%">
       <p style="display:inline; margin-left:10px; font-weight:bolder; font-size:16px; margin-bottom:10px">{{image.user}}</p>
-      <p style="font-size:12px;color:grey; margin-top:10px">{{image.date_uploaded|timesince|upper}} ago</p>
+      <p style="font-size:12px;color:grey; margin-top:10px">{{image.date_posted|timesince|upper}} ago</p>
     </header>
     <p style="margin-top:10px;font-weight:bolder; font-size:16px">{{image.likes}} Likes</p><br>
     <h3 style="text-decoration:underline">Comments</h3>
