--- a/instagram/templates/newsfeed.html
+++ b/instagram/templates/newsfeed.html
@@ -54,7 +54,7 @@
           <div class="user_stories" style="margin-bottom:20px">
             <img src="{{profile.profile_photo.url}}" alt="" style="height:50px;width:50px; border-radius:50%; float:left; margin-right:15px">
             <a href="{% url 'userProfiles' profile.id %}"> <p style="font-weight:bold;font-size:16px">{{profile.user}}<br></a>
-            <span style="font-size:12px;font-weight:normal; color:grey">{{profile.last_update|timesince|upper}} ago</span></p>
+            <span style="font-size:12px;font-weight:normal; color:grey">{{profile.update|timesince|upper}} ago</span></p>
           </div>
           {% endfor %}
         </div>
