--- a/instagram/templates/navbar.html
+++ b/instagram/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% url 'welcome' %}"><i class="fas fa-camera-retro"></i> | Slygram</a>
+    <a class="navbar-brand" href="{% url 'newsfeed' %}"><i class="fas fa-camera-retro"></i> | Slygram</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -16,9 +16,9 @@
                     <i class="far fa-user fa-lg"></i>
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="{% url 'new-article' %}">Create Post</a>
-                    <a class="dropdown-item" href="{% url 'new-profile'%}">Create Profile</a>
-                    <a class="dropdown-item" href="{% url 'profile'%}">Profile</a>
+                    <a class="dropdown-item" href="{% url 'new-story' %}">Create Post</a>
+                    <a class="dropdown-item" href="{% url 'profile'%}">Create Profile</a>
+                    <a class="dropdown-item" href="{% url 'user'%}">Profile</a>
                     <a class="dropdown-item" href="/accounts/password/change">Change Password</a>
                     <a class="dropdown-item" href="/logout">Logout</a>
   
