--- a/instagram/templates/base.html
+++ b/instagram/templates/base.html
@@ -151,13 +151,11 @@
   <nav class="navbar navbar-default navbar-fixed-top" style="padding:5px">
 
     <div class="container">
-
-      <h1 class="logo"><a href="/"><img src="https://seeklogo.com/images/I/instagram-new-2016-glyph-logo-84CB825424-seeklogo.com.png" alt="" style="width:35px">
-      </a>|
-    </h1>
-      <div class="logoname" style="display:inline">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/2000px-Instagram_logo.svg.png" alt="" style="width:135px">
-      </div>
+     <div class="logoname" style="display:inline">
+      <h1 class="logo"><a href="/"><img src="https://seeklogo.com/images/I/instagram-new-2016-glyph-logo-84CB825424-seeklogo.com.png" alt="" style="width:35px"></a></h1>
+      <a class="navbar-brand" href="" style="color:black; font-size: 200%"><strong>Slygram </strong></a>
+      </div> 
+      
       <ul class="nav nav-right">
         <form class="form-group" action="Profile" method="post" style="padding: 8px; text-align: center;border-radius: 8px;border: 2px solid #ddd;outline: 0;margin-right:400px; display:inline" role="search">
           {% csrf_token %}
