--- a/instagram/templates/newsfeed.html
+++ b/instagram/templates/newsfeed.html
@@ -1,15 +1,10 @@
- 
-{% load bootstrap3 %} 
+{% extends 'base.html' %} 
+{% load bootstrap3 %}
 {% load staticfiles %}
 {% block content%}
 
-
 <div class="container-fluid" style="margin-top:150px">
   {% if user.is_authenticated %}
-  <div class="col-sm-7">
-    <div class="col-sm-2">
-
-    </div>
     <div class="col-sm-10">
       {% for image in images %}
       <div class="well" style="background-color:white; margin-bottom:70px">
