--- a/instagram/templates/profile.html
+++ b/instagram/templates/profile.html
@@ -7,17 +7,15 @@
     </div>
     <div class="col-sm-8" style=" padding:20px; border-bottom: 1px solid #ddd">
       <div class="profile">
-        <img src="{{profile.profile_photo.url}}" alt="" style="height:50px;width:50px; border-radius:50%; float:left; margin-right:50px">
+        <img src="{{profile.profile_photo.url}}" alt="" style="">
         <p style="font-weight:bold; font-size:5px">{{profile.user}}</p>
         <div class="">
-          <input type="text" name="" value="Edit Profile" class=" btn btn-default btn-block" style="display:inline-block; width:50px; font-size:20px">
+          <input type="text" name="" value="Edit Profile" class=" btn btn-default btn-block" style="">
           <i class="fa fa-cog" aria-hidden="true" style="font-size:10px; margin-left:10px"></i>
         </div>
         <br>
         <p style="font-size:20px"><span><span style="font-weight:bolder"> </span>pixels</span> <span style="margin-left:20px"><span style="font-weight:bolder">1000 </span> Followers</span> <span style="margin-left:20px"> <span style="font-weight:bolder">4000 </span>Following</span></p>
       </div>
-    </div>
-    <div class="col-sm-2">
     </div>
   </div>
   <div class="row">
@@ -26,9 +24,15 @@
   <div class="container">
     {% for image in images %}
     <a href="{% url 'singlePic' image.id%}">
-      <div class="item">
-        <img src="{{image.image.url}}">
+      <br><br>
+      <br><br>
+      <br><br>
+      <br><br>
+      <br><br>
+      <div class="item">   
+          <img src="{{image.image.url}}" >
       </div>
+    </div>
     </a>
     {% endfor %}
 </div> <!--close container-->
