--- a/instagram/templates/registration/login.html
+++ b/instagram/templates/registration/login.html
@@ -13,7 +13,8 @@
         </a>
       </h1>
           <div class="logoname" style="display:inline">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/2000px-Instagram_logo.svg.png" style="width:150px">
+              <img alt="IG" src="https://kokolevel.com/wp-content/uploads/2018/10/Instagram.png" height=100px; class="img-fluid">
+
           </div>
 
       </div>
