--- a/instagram/templates/newsfeed.html
+++ b/instagram/templates/newsfeed.html
@@ -24,7 +24,11 @@
           </a>
           <i class="material-icons" style="float:right; font-size:40px"></i>
         </div>
-        <p style="margin-top:10px;font-weight:bolder; font-size:16px"></i>{{image.likes}} Likes</p><br>
+
+        
+
+
+        <p style="margin-top:10px;font-weight:bolder; font-size:16px">{{image.likes}}Likes</p><br>
         {% for comment in comments %}
         <p style="margin-bottom:-1px"><span style=" margin-right:10px; font-weight:bolder; font-size:16px">{{comment.user}}</span>{{comment.comment}}</p>
         {% endfor %}
@@ -74,7 +78,8 @@
           <i class="fa fa-heart-o" aria-hidden="true" style="margin-right:5px"></i>
           <i class="material-icons" style="float:right; font-size:40px">
         </div>
-        <p style="margin-top:10px;font-weight:bolder; font-size:16px">{{image.likes}} Likes</p><br>
+        <i class="fa fa-heart-o fa-1x"></i>
+        <p style="margin-top:10px;font-weight:bolder; font-size:16px">{{image.likes}}Likes</p><br>
 
         <p style="margin-top:-20px"><span style=" margin-right:10px; font-weight:bolder; font-size:16px">Kadan</span>Lovely</p>
         <p style="font-size:14px;color:grey">{{image.date_posted|timesince}} ago</p>
