--- a/instagram/templates/newsfeed.html
+++ b/instagram/templates/newsfeed.html
@@ -24,11 +24,11 @@
           </a>
           <i class="material-icons" style="float:right; font-size:40px"></i>
         </div>
-
-        
-
-
-        <p style="margin-top:10px;font-weight:bolder; font-size:16px">{{image.likes}}Likes</p><br>
+        <div style="display: flex">
+          
+          <p style="margin-top:10px;font-weight:bolder; font-size:16px"><i class="fa fa-heart-o"></i>{{image.likes}}Likes</i></p><br>
+          <p style="margin:10px 20px;font-weight:bolder; font-size:16px"><i class="fa fa-comments-o"></i></p><br>
+        </div>
         {% for comment in comments %}
         <p style="margin-bottom:-1px"><span style=" margin-right:10px; font-weight:bolder; font-size:16px">{{comment.user}}</span>{{comment.comment}}</p>
         {% endfor %}
@@ -78,7 +78,6 @@
           <i class="fa fa-heart-o" aria-hidden="true" style="margin-right:5px"></i>
           <i class="material-icons" style="float:right; font-size:40px">
         </div>
-        <i class="fa fa-heart-o fa-1x"></i>
         <p style="margin-top:10px;font-weight:bolder; font-size:16px">{{image.likes}}Likes</p><br>
 
         <p style="margin-top:-20px"><span style=" margin-right:10px; font-weight:bolder; font-size:16px">Kadan</span>Lovely</p>
